[gd_scene load_steps=43 format=3 uid="uid://tfy83b2uc6hh"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_lbj7m"]
[ext_resource type="Texture2D" uid="uid://cnuqbnvjsg53d" path="res://assets/mvp4_assets/player.png" id="2_6q4jk"]
[ext_resource type="PackedScene" uid="uid://br8qm13yce4pr" path="res://src/dialogue/dialogue_ui.tscn" id="2_cft6f"]
[ext_resource type="Texture2D" uid="uid://m6aa6qxtafpu" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0001.tres" id="3_arfd1"]
[ext_resource type="Texture2D" uid="uid://cb1ud4vqk0bd5" path="res://assets/ui/map/player_glow.png" id="3_ru4vn"]
[ext_resource type="Texture2D" uid="uid://dskxpfuf0eo8y" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0002.tres" id="4_k6xfi"]
[ext_resource type="Script" path="res://src/abstract_base_classes/gravitized_component.gd" id="4_wg5r1"]
[ext_resource type="Texture2D" uid="uid://bi2byggy5du54" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0003.tres" id="5_h877a"]
[ext_resource type="Texture2D" uid="uid://dwywxmxhphsqt" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0004.tres" id="6_2euio"]
[ext_resource type="Texture2D" uid="uid://2idgorc23fon" path="res://assets/ui/map/travel_line_texture.png" id="6_hr78g"]
[ext_resource type="PackedScene" uid="uid://b3xmpb6et0p0g" path="res://src/player/clicker_ui.tscn" id="6_j7ju8"]
[ext_resource type="Texture2D" uid="uid://cs8n376njp8tu" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0005.tres" id="7_35k80"]
[ext_resource type="Texture2D" uid="uid://bohhvgjbf2is6" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0006.tres" id="8_hn2fj"]
[ext_resource type="Texture2D" uid="uid://csqgxujr06yjt" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0007.tres" id="9_2vyka"]
[ext_resource type="Texture2D" uid="uid://cwhx4vepubjml" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0008.tres" id="10_h8k06"]
[ext_resource type="Texture2D" uid="uid://b4tll8poa2tww" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0009.tres" id="11_7hp7l"]
[ext_resource type="Texture2D" uid="uid://d06gbnva0bed" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0010.tres" id="12_ai58c"]
[ext_resource type="Texture2D" uid="uid://dkhjl6bvva2m4" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0011.tres" id="13_arel7"]
[ext_resource type="Texture2D" uid="uid://dacq2lc1poujq" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Idle-0012.tres" id="14_4it2f"]
[ext_resource type="Texture2D" uid="uid://dcutfavearmas" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0001.tres" id="15_43hse"]
[ext_resource type="Texture2D" uid="uid://pk20f0he4yey" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0002.tres" id="16_erk3t"]
[ext_resource type="Texture2D" uid="uid://x3obk4hb3p22" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0003.tres" id="17_xf2k7"]
[ext_resource type="Texture2D" uid="uid://b0v85ci8de7of" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0004.tres" id="18_5a686"]
[ext_resource type="Texture2D" uid="uid://bh8k08py5oxcv" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0005.tres" id="19_vfv38"]
[ext_resource type="Texture2D" uid="uid://bu4gnhv1mw7ew" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0006.tres" id="20_t03og"]
[ext_resource type="Texture2D" uid="uid://2k6m6h6urh8n" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0007.tres" id="21_k2quk"]
[ext_resource type="Texture2D" uid="uid://d1g7rgff2hxi2" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0008.tres" id="22_ejggs"]
[ext_resource type="Texture2D" uid="uid://c7vvpjh8446p4" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0009.tres" id="23_rs58p"]
[ext_resource type="Texture2D" uid="uid://b5shr5df442js" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0010.tres" id="24_wxhv4"]
[ext_resource type="Texture2D" uid="uid://cp60ij3tvv1ea" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0011.tres" id="25_5hrev"]
[ext_resource type="Texture2D" uid="uid://do8kw0vjqt6ch" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Run-0012.tres" id="26_xuo4f"]
[ext_resource type="Texture2D" uid="uid://bnpcdy84rc7p6" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0013.tres" id="27_74rot"]
[ext_resource type="Texture2D" uid="uid://cp6ax3m1fptpr" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0014.tres" id="28_mjej0"]
[ext_resource type="Texture2D" uid="uid://dw5wk37ekrgm1" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0015.tres" id="29_ph5cj"]
[ext_resource type="Texture2D" uid="uid://brox47ojncfmi" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0016.tres" id="30_xmiqy"]
[ext_resource type="Texture2D" uid="uid://cjfqurl3en3cn" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0017.tres" id="31_dp4wp"]
[ext_resource type="Texture2D" uid="uid://yb8gt1fgojok" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0018.tres" id="32_smicg"]
[ext_resource type="Texture2D" uid="uid://btva0ce26d1to" path="res://assets/character/player/sprite/animations/Player.sprites/Player_Stop-0019.tres" id="33_y2f1x"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y3je8"]
blend_mode = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_nrpse"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_arfd1")
}, {
"duration": 1.0,
"texture": ExtResource("4_k6xfi")
}, {
"duration": 1.0,
"texture": ExtResource("5_h877a")
}, {
"duration": 1.0,
"texture": ExtResource("6_2euio")
}, {
"duration": 1.0,
"texture": ExtResource("7_35k80")
}, {
"duration": 1.0,
"texture": ExtResource("8_hn2fj")
}, {
"duration": 1.0,
"texture": ExtResource("9_2vyka")
}, {
"duration": 1.0,
"texture": ExtResource("10_h8k06")
}, {
"duration": 1.0,
"texture": ExtResource("11_7hp7l")
}, {
"duration": 1.0,
"texture": ExtResource("12_ai58c")
}, {
"duration": 1.0,
"texture": ExtResource("13_arel7")
}, {
"duration": 1.0,
"texture": ExtResource("14_4it2f")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_43hse")
}, {
"duration": 1.0,
"texture": ExtResource("16_erk3t")
}, {
"duration": 1.0,
"texture": ExtResource("17_xf2k7")
}, {
"duration": 1.0,
"texture": ExtResource("18_5a686")
}, {
"duration": 1.0,
"texture": ExtResource("19_vfv38")
}, {
"duration": 1.0,
"texture": ExtResource("20_t03og")
}, {
"duration": 1.0,
"texture": ExtResource("21_k2quk")
}, {
"duration": 1.0,
"texture": ExtResource("22_ejggs")
}, {
"duration": 1.0,
"texture": ExtResource("23_rs58p")
}, {
"duration": 1.0,
"texture": ExtResource("24_wxhv4")
}, {
"duration": 1.0,
"texture": ExtResource("25_5hrev")
}, {
"duration": 1.0,
"texture": ExtResource("26_xuo4f")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_74rot")
}, {
"duration": 1.0,
"texture": ExtResource("28_mjej0")
}, {
"duration": 1.0,
"texture": ExtResource("29_ph5cj")
}, {
"duration": 1.0,
"texture": ExtResource("30_xmiqy")
}, {
"duration": 1.0,
"texture": ExtResource("31_dp4wp")
}, {
"duration": 1.0,
"texture": ExtResource("32_smicg")
}, {
"duration": 1.0,
"texture": ExtResource("33_y2f1x")
}],
"loop": true,
"name": &"Stop",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_erpsl"]
radius = 68.2904
height = 322.42

[sub_resource type="Gradient" id="Gradient_2aots"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player_sprite", "grav_component", "interactable_detector", "dialogue_ui", "level_unlock_popup", "coyote_timer", "jump_buffer_timer", "min_jump_timer", "throw_arc_line")]
z_index = 5
collision_layer = 2
script = ExtResource("1_lbj7m")
player_sprite = NodePath("AnimatedSprite2D")
grav_component = NodePath("GravitizedComponent")
interactable_detector = NodePath("DetectionAreas/InteractableDetector")
dialogue_ui = NodePath("DialogueUi")
level_unlock_popup = NodePath("LevelUnlockPopup")
coyote_timer = NodePath("Timers/CoyoteTimer")
jump_buffer_timer = NodePath("Timers/JumpBufferTimer")
min_jump_timer = NodePath("Timers/MinimumJumpTimer")
throw_arc_line = NodePath("ThrowArc")

[node name="PlayerGlow" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_y3je8")
position = Vector2(-8, -23)
texture = ExtResource("3_ru4vn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(0.239959, 0.239959)
sprite_frames = SubResource("SpriteFrames_nrpse")
animation = &"Idle"
autoplay = "Idle"

[node name="PlayerSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(3, 4)
texture = ExtResource("2_6q4jk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2(0.893244, 0.893244)
shape = SubResource("CapsuleShape2D_erpsl")

[node name="GravitizedComponent" type="Node2D" parent="." node_paths=PackedStringArray("gravity_detector")]
script = ExtResource("4_wg5r1")
gravity_detector = NodePath("../DetectionAreas/GravityDetector")

[node name="DetectionAreas" type="Node2D" parent="."]

[node name="GravityDetector" type="Area2D" parent="DetectionAreas"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionAreas/GravityDetector"]
scale = Vector2(0.893244, 0.893244)
shape = SubResource("CapsuleShape2D_erpsl")

[node name="InteractableDetector" type="Area2D" parent="DetectionAreas"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAreas/InteractableDetector"]
scale = Vector2(0.893244, 0.893244)
shape = SubResource("CapsuleShape2D_erpsl")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MinimumJumpTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DialogueUi" parent="." instance=ExtResource("2_cft6f")]
layer = 128
visible = false

[node name="LevelUnlockPopup" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="LevelUnlockPopup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -430.0
offset_top = 214.0
offset_right = 430.0
offset_bottom = 303.0
grow_horizontal = 2
color = Color(0.301961, 0.301961, 0.301961, 0.388235)

[node name="Label" type="Label" parent="LevelUnlockPopup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -408.0
offset_top = 209.0
offset_right = 408.0
offset_bottom = 292.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "your map has been updated"

[node name="ClickerUi" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_j7ju8")]
player = NodePath("..")

[node name="ThrowArc" type="Line2D" parent="."]
width = 20.0
gradient = SubResource("Gradient_2aots")
texture = ExtResource("6_hr78g")
texture_mode = 2

[connection signal="dialogue_finished" from="DialogueUi" to="." method="_on_dialogue_ui_dialogue_finished"]
